--- a/package.json
+++ b/package.json
@@ -1,40 +1,28 @@
 {
-  "name": "react-simple-boilerplate",
+  "name": "simple-shopping-basket",
   "version": "1.0.0",
-  "description": "Simple and lightweight Boilerplate for ReactJS projects",
+  "description": "Started from - https://github.com/noahlotzer/react-simple-boilerplate.git",
   "scripts": {
     "lint": "eslint src",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/noahlotzer/react-simple-boilerplate.git"
-  },
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "reload",
-    "live",
-    "edit",
-    "webpack"
-  ],
-  "author": "Noah-Jerome Lotzer <n.lotzer@neusta.de>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/noahlotzer/react-simple-boilerplate/issues"
-  },
-  "homepage": "https://github.com/noahlotzer/react-simple-boilerplate",
+  "author": "Radu Anastase",
   "devDependencies": {
     "babel-core": "6.10.4",
+    "babel-jest": "18.0.0",
     "babel-loader": "6.0.1",
+    "babel-polyfill": "6.23.0",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.11.1",
-    "babel-preset-stage-0": "6.5.0",
     "css-loader": "0.23.1",
+    "enzyme": "2.7.1",
     "eslint": "2.7.0",
     "eslint-plugin-react": "5.2.2",
+    "jest": "18.1.0",
     "node-sass": "3.8.0",
+    "react-addons-test-utils": "15.2.1",
+    "react-dom": "15.2.1",
     "sass-loader": "4.0.0",
     "style-loader": "0.13.1",
     "webpack": "1.13.1",
